syntax = "proto3";

package ai.stigmer.agentic.agentinstance.v1;

import "ai/stigmer/agentic/agentinstance/v1/spec.proto";
import "ai/stigmer/commons/apiresource/metadata.proto";
import "ai/stigmer/commons/apiresource/status.proto";
import "buf/validate/validate.proto";

// AgentInstance represents a configured deployment of an Agent template.
message AgentInstance {
  // API version for this resource type.
  string api_version = 1 [(buf.validate.field).string.const = 'agentic.stigmer.ai/v1'];

  // Resource kind identifier.
  string kind = 2 [(buf.validate.field).string.const = 'AgentInstance'];

  // Standard resource metadata including name, id, labels, and tags.
  // AgentInstances can have platform, organization, or identity_account scope.
  ai.stigmer.commons.apiresource.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // Spec defining the instance configuration.
  AgentInstanceSpec spec = 4;

  // Status of the instance.
  ai.stigmer.commons.apiresource.ApiResourceAuditStatus status = 5;
}
